@@ -1,17 +1,18 @@
 package com.divitngoc.application.controller;
 
+import java.util.Arrays;
 import java.util.List;
-
-import org.bson.types.ObjectId;
 
 import com.divitngoc.application.model.Car;
 import com.divitngoc.application.model.DataResponse;
 import com.divitngoc.application.model.ResponseStatus;
 import com.divitngoc.application.service.CarService;
 
+import lombok.extern.slf4j.Slf4j;
 import spark.Request;
 import spark.Response;
 
+@Slf4j
 public class CarController {
 
 	private CarService service;
@@ -25,17 +26,29 @@ public class CarController {
 		return new DataResponse(ResponseStatus.SUCCESS, "", carList);
 	}
 
-	public DataResponse getCar(String _id) {
-		Car car = new Car();
-		car.set_id(new ObjectId(_id));
+	public DataResponse getCar(String _id, Car car) {
+		DataResponse response = new DataResponse();
+		String message = "";
+		try {
+			car.set_id(_id);
+		} catch (IllegalArgumentException e) {
+			log.error("Error setting object id");
+			message = "ID is not valid, must be in hexadecimal";
+			response.setStatus(ResponseStatus.ERROR);
+			response.setMessage(message);
+			return response;
+		}
 		car = service.fetchCar(car);
+
 		if (car != null) {
-			return new DataResponse(ResponseStatus.SUCCESS, "", List.of(car));
+			response.setStatus(ResponseStatus.SUCCESS);
+			response.setData(Arrays.asList(car));
+		} else {
+			response.setStatus(ResponseStatus.ERROR);
+			message = "Car does not exist.";
 		}
-		else
-		{
-			return new DataResponse(ResponseStatus.ERROR, "Car does not exist.", null);
-		}
+		response.setMessage(message);
+		return response;
 	}
 
 	public DataResponse saveCar(Car car) {
@@ -43,9 +56,18 @@ public class CarController {
 		return new DataResponse(ResponseStatus.SUCCESS, "Car added.", null);
 	}
 
-	public DataResponse deleteCar(String _id) {
-		Car car = new Car();
-		car.set_id(new ObjectId(_id));
+	public DataResponse deleteCar(String _id, Car car) {
+		DataResponse response = new DataResponse();
+		String message = "";
+		try {
+			car.set_id(_id);
+		} catch (IllegalArgumentException e) {
+			log.error("Error setting object id");
+			message = "ID is not valid, must be in hexadecimal";
+			response.setStatus(ResponseStatus.ERROR);
+			response.setMessage(message);
+			return response;
+		}
 		boolean success = service.deleteCar(car);
 		if (success) {
 			return new DataResponse(ResponseStatus.SUCCESS, "Car deleted.", null);
